changed to get_raw_data and process_raw_data instead of download and clean

--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -129,7 +129,7 @@
     "            self.connect()\n",
     "            self.load_library_list()\n",
     "\n",
-    "    def __make_sa_engine_conn(self, raise_err=False):  #MION changed raise_err default to True\n",
+    "    def __make_sa_engine_conn(self, raise_err=False):  \n",
     "        username = self._username\n",
     "        hostname = self._hostname\n",
     "        password = urllib.parse.quote_plus(self._password)\n",
