--- a/nbs/01_wrds/06_ibes_ltg.ipynb
+++ b/nbs/01_wrds/06_ibes_ltg.ipynb
@@ -71,16 +71,12 @@
    "source": [
     "#|exports\n",
     "from __future__ import annotations\n",
-    "from pathlib import Path\n",
     "from typing import List\n",
-    "import os\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "\n",
     "import pandasmore as pdm\n",
-    "from finsets.wrds import wrds_api\n",
-    "from finsets import RESOURCES"
+    "from finsets.wrds import wrds_api"
    ]
   },
   {
@@ -102,8 +98,7 @@
     "ENTITY_ID_IN_RAW_DSET = 'permno'\n",
     "ENTITY_ID_IN_CLEAN_DSET = 'permno'\n",
     "TIME_VAR_IN_RAW_DSET = 'date'\n",
-    "TIME_VAR_IN_CLEAN_DSET = 'Mdate'\n",
-    "LABELS_FILE = RESOURCES/'ibes_detu_epsus_variable_descriptions.csv'"
+    "TIME_VAR_IN_CLEAN_DSET = 'Mdate'"
    ]
   },
   {
@@ -113,37 +108,26 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def raw_metadata() -> pd.DataFrame:\n",
-    "    \"Collects metadata from WRDS `{LIBRARY}.{TABLE}` table and merges it with variable labels from LABELS_FILE\"\n",
+    "def list_all_vars() -> pd.DataFrame:\n",
+    "    \"Collects names of all available variables from WRDS f`{LIBRARY}.{TABLE}`\"\n",
     "\n",
     "    try:\n",
     "        db = wrds_api.Connection()\n",
-    "        funda = db.describe_table(LIBRARY,TABLE)\n",
-    "        nr_rows = db.get_row_count(LIBRARY,TABLE)\n",
+    "        funda = db.describe_table(LIBRARY,TABLE).assign(wrds_library=LIBRARY, wrds_table=TABLE)\n",
     "    finally:\n",
     "        db.close()\n",
     "\n",
-    "    meta = funda[['name','type']].copy()\n",
-    "    meta['nr_rows'] = nr_rows\n",
-    "    meta['wrds_library'] = LIBRARY\n",
-    "    meta['wrds_table'] = TABLE\n",
-    "\n",
-    "    # Get variable labels from LABELS_FILE\n",
-    "    df = pd.read_csv(LABELS_FILE)\n",
-    "    df['Variable Label'] = df.apply(lambda row: row['Description'].replace(row['Variable Name'].strip()+' -- ', ''), axis=1)\n",
-    "    df['Variable Label'] = df.apply(lambda row: row['Variable Label'].replace( '(' + row['Variable Name'].strip() + ')', ''), axis=1)\n",
-    "    df['Variable Name'] = df['Variable Name'].str.strip().str.lower()\n",
-    "    df = df[['Variable Name', 'Variable Label']].copy()\n",
-    "    df.columns = ['name','label']\n",
-    "    \n",
-    "    # Merge metadata and variable labels and clean up a bit\n",
-    "    meta = meta.merge(df, how='left', on='name')\n",
-    "    meta['output_of'] = 'wrds.ibes_ltg.download'\n",
-    "    meta = pdm.order_columns(meta,these_first=['name','label','output_of'])\n",
-    "    for v in list(meta.columns):\n",
-    "        meta[v] = meta[v].astype('string')\n",
-    "    \n",
-    "    return meta"
+    "    return funda[['name','type','wrds_library','wrds_table']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "all_vars = list_all_vars()"
    ]
   },
   {
@@ -151,15 +135,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading library list...\n",
-      "Done\n",
-      "Approximately 31823580 rows in ibes.detu_epsus.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -182,10 +157,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>name</th>\n",
-       "      <th>label</th>\n",
-       "      <th>output_of</th>\n",
        "      <th>type</th>\n",
-       "      <th>nr_rows</th>\n",
        "      <th>wrds_library</th>\n",
        "      <th>wrds_table</th>\n",
        "    </tr>\n",
@@ -194,50 +166,147 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ticker</td>\n",
-       "      <td>I/B/E/S Ticker</td>\n",
-       "      <td>wrds.ibes_ltg.download</td>\n",
        "      <td>VARCHAR(6)</td>\n",
-       "      <td>31823580</td>\n",
        "      <td>ibes</td>\n",
        "      <td>detu_epsus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>cusip</td>\n",
-       "      <td>CUSIP/SEDOL</td>\n",
-       "      <td>wrds.ibes_ltg.download</td>\n",
        "      <td>VARCHAR(8)</td>\n",
-       "      <td>31823580</td>\n",
        "      <td>ibes</td>\n",
        "      <td>detu_epsus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>oftic</td>\n",
-       "      <td>Official Ticker</td>\n",
-       "      <td>wrds.ibes_ltg.download</td>\n",
        "      <td>VARCHAR(6)</td>\n",
-       "      <td>31823580</td>\n",
        "      <td>ibes</td>\n",
        "      <td>detu_epsus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>cname</td>\n",
-       "      <td>Company Name</td>\n",
-       "      <td>wrds.ibes_ltg.download</td>\n",
        "      <td>VARCHAR(16)</td>\n",
-       "      <td>31823580</td>\n",
        "      <td>ibes</td>\n",
        "      <td>detu_epsus</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>actdats</td>\n",
-       "      <td>Activation Date, SAS Format</td>\n",
-       "      <td>wrds.ibes_ltg.download</td>\n",
        "      <td>DATE</td>\n",
-       "      <td>31823580</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>estimator</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>analys</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>currfl</td>\n",
+       "      <td>VARCHAR(1)</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>pdf</td>\n",
+       "      <td>VARCHAR(1)</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>fpi</td>\n",
+       "      <td>VARCHAR(1)</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>measure</td>\n",
+       "      <td>VARCHAR(3)</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>value</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>curr</td>\n",
+       "      <td>VARCHAR(3)</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>usfirm</td>\n",
+       "      <td>SMALLINT</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>fpedats</td>\n",
+       "      <td>DATE</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>acttims</td>\n",
+       "      <td>TIME</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>revdats</td>\n",
+       "      <td>DATE</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>revtims</td>\n",
+       "      <td>TIME</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>anndats</td>\n",
+       "      <td>DATE</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>anntims</td>\n",
+       "      <td>TIME</td>\n",
+       "      <td>ibes</td>\n",
+       "      <td>detu_epsus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>report_curr</td>\n",
+       "      <td>VARCHAR(3)</td>\n",
        "      <td>ibes</td>\n",
        "      <td>detu_epsus</td>\n",
        "    </tr>\n",
@@ -246,19 +315,28 @@
        "</div>"
       ],
       "text/plain": [
-       "      name                         label               output_of         type  \\\n",
-       "0   ticker               I/B/E/S Ticker   wrds.ibes_ltg.download   VARCHAR(6)   \n",
-       "1    cusip                  CUSIP/SEDOL   wrds.ibes_ltg.download   VARCHAR(8)   \n",
-       "2    oftic              Official Ticker   wrds.ibes_ltg.download   VARCHAR(6)   \n",
-       "3    cname                 Company Name   wrds.ibes_ltg.download  VARCHAR(16)   \n",
-       "4  actdats  Activation Date, SAS Format   wrds.ibes_ltg.download         DATE   \n",
-       "\n",
-       "    nr_rows wrds_library  wrds_table  \n",
-       "0  31823580         ibes  detu_epsus  \n",
-       "1  31823580         ibes  detu_epsus  \n",
-       "2  31823580         ibes  detu_epsus  \n",
-       "3  31823580         ibes  detu_epsus  \n",
-       "4  31823580         ibes  detu_epsus  "
+       "           name              type wrds_library  wrds_table\n",
+       "0        ticker        VARCHAR(6)         ibes  detu_epsus\n",
+       "1         cusip        VARCHAR(8)         ibes  detu_epsus\n",
+       "2         oftic        VARCHAR(6)         ibes  detu_epsus\n",
+       "3         cname       VARCHAR(16)         ibes  detu_epsus\n",
+       "4       actdats              DATE         ibes  detu_epsus\n",
+       "5     estimator  DOUBLE_PRECISION         ibes  detu_epsus\n",
+       "6        analys  DOUBLE_PRECISION         ibes  detu_epsus\n",
+       "7        currfl        VARCHAR(1)         ibes  detu_epsus\n",
+       "8           pdf        VARCHAR(1)         ibes  detu_epsus\n",
+       "9           fpi        VARCHAR(1)         ibes  detu_epsus\n",
+       "10      measure        VARCHAR(3)         ibes  detu_epsus\n",
+       "11        value  DOUBLE_PRECISION         ibes  detu_epsus\n",
+       "12         curr        VARCHAR(3)         ibes  detu_epsus\n",
+       "13       usfirm          SMALLINT         ibes  detu_epsus\n",
+       "14      fpedats              DATE         ibes  detu_epsus\n",
+       "15      acttims              TIME         ibes  detu_epsus\n",
+       "16      revdats              DATE         ibes  detu_epsus\n",
+       "17      revtims              TIME         ibes  detu_epsus\n",
+       "18      anndats              DATE         ibes  detu_epsus\n",
+       "19      anntims              TIME         ibes  detu_epsus\n",
+       "20  report_curr        VARCHAR(3)         ibes  detu_epsus"
       ]
      },
      "execution_count": null,
@@ -268,7 +346,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "raw_metadata().head()"
+    "all_vars #.name.count()"
    ]
   },
   {
@@ -289,11 +367,13 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def parse_varlist(vars: List[str]=None, #list of variables requested by user\n",
-    "                  req_vars: List[str] = ['ticker', 'anndats'], #list of variables that will automatically get downloaded, even if not in `vars`\n",
+    "def parse_varlist(vars: List[str]|str=None, #list of variables requested by user\n",
+    "                  req_vars: List[str] = ['ticker', 'anndats'], #list of variables that will get downloaded, even if not in `vars`\n",
     "                  prefix: str='a.', #string to add in front of each variable name when we build the SQL string of variable names\n",
     "                  ) -> str:\n",
-    "    \"\"\"Add required variables to requested variables, validate them, and build the sql string with their names\"\"\"\n",
+    "    \"\"\"Adds required variables to requested variables, validates them, and builds the SQL string with their names\"\"\"\n",
+    "\n",
+    "    if vars=='*': return f'{prefix}*' \n",
     "\n",
     "    # Build full list of variables that will be downloaded\n",
     "    if vars is None: vars = default_raw_vars()\n",
@@ -301,7 +381,7 @@
     "    vars =  req_vars + [x for x in vars if x not in req_vars] #in case `vars` already contains some of the required variables\n",
     "\n",
     "    # Validate variables to be downloaded (make sure that they are in the target database)\n",
-    "    valid_vars = list(raw_metadata().name)\n",
+    "    valid_vars = list(list_all_vars().name)\n",
     "    invalid_vars = [v for v in vars if v not in valid_vars]\n",
     "    if invalid_vars: raise ValueError(f\"These vars are not in the database: {invalid_vars}\") \n",
     "\n",
@@ -312,10 +392,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a.ticker,a.anndats,a.value,a.fpi'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "parse_varlist(['value','fpi'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; `permno`, `ticker`, and `anndats` added by default\n",
+    "def get_raw_data(vars: List[str]=None, # If None, downloads `default_raw_vars`; `permno`, `ticker`, and `anndats` added by default\n",
     "             obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "             start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None, #End date in MM/DD/YYYY format; if None, defaults to current date\n",
@@ -323,7 +424,7 @@
     "             ) -> pd.DataFrame:\n",
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `ibes.detu_epsus` library and adds PERMNO from CRSP\"\"\"\n",
     "\n",
-    "    vars = parse_varlist(vars)\n",
+    "    vars = parse_varlist(vars, prefix='a.')\n",
     "\n",
     "    sql_string=f\"\"\"SELECT {vars}, b.permno\n",
     "                        FROM {LIBRARY}.{TABLE} AS a\n",
@@ -347,17 +448,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading library list...\n",
-      "Done\n",
-      "Approximately 31823580 rows in ibes.detu_epsus.\n",
-      "Loading library list...\n",
-      "Done\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -407,62 +497,6 @@
        "      <td>D</td>\n",
        "      <td>14392.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0001</td>\n",
-       "      <td>2019-01-24</td>\n",
-       "      <td>-173.7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-01-24</td>\n",
-       "      <td>2019-01-24</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>48368.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>14392.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0001</td>\n",
-       "      <td>2019-03-17</td>\n",
-       "      <td>-174.4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-03-17</td>\n",
-       "      <td>2019-03-17</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>48368.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>14392.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>000R</td>\n",
-       "      <td>2019-08-15</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-12-20</td>\n",
-       "      <td>2019-08-15</td>\n",
-       "      <td>481.0</td>\n",
-       "      <td>114029.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>14378.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>000Y</td>\n",
-       "      <td>2019-09-18</td>\n",
-       "      <td>-84.4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-09-24</td>\n",
-       "      <td>2019-09-24</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>162718.0</td>\n",
-       "      <td>D</td>\n",
-       "      <td>14436.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -470,17 +504,9 @@
       "text/plain": [
        "  ticker     anndats  value fpi fpedats     revdats     actdats  estimator  \\\n",
        "0   0001  2019-01-04 -174.4   0    None  2019-01-04  2019-01-04      183.0   \n",
-       "1   0001  2019-01-24 -173.7   0    None  2019-01-24  2019-01-24      183.0   \n",
-       "2   0001  2019-03-17 -174.4   0    None  2019-03-17  2019-03-17      183.0   \n",
-       "3   000R  2019-08-15   15.0   0    None  2019-12-20  2019-08-15      481.0   \n",
-       "4   000Y  2019-09-18  -84.4   0    None  2019-09-24  2019-09-24      183.0   \n",
        "\n",
-       "     analys pdf   permno  \n",
-       "0   48368.0   D  14392.0  \n",
-       "1   48368.0   D  14392.0  \n",
-       "2   48368.0   D  14392.0  \n",
-       "3  114029.0   D  14378.0  \n",
-       "4  162718.0   D  14436.0  "
+       "    analys pdf   permno  \n",
+       "0  48368.0   D  14392.0  "
       ]
      },
      "execution_count": null,
@@ -490,7 +516,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "ltg = download(permno_match_score=(1,2), start_date='01/01/2019', end_date='01/01/2022', obs_limit=1000)\n",
+    "ltg = get_raw_data(start_date='01/01/2019', end_date='01/01/2022', obs_limit=1)\n",
     "ltg.head()"
    ]
   },
