--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from finsets import fred, wrds, papers, metadata"
+    "from finsets import fred, wrds, papers"
    ]
   },
   {
@@ -91,283 +91,6 @@
    "metadata": {},
    "source": [
     "Below, we very briefly describe each submodule. For more details, please see the documentation of each submodule (they provide a lot more functionality than presented here)."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Core"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Functions that are not specific to a particular data source. \n",
-    "\n",
-    "The functions in this model are available directly in the `finsets` namespace. For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>label</th>\n",
-       "      <th>output_of</th>\n",
-       "      <th>inputs</th>\n",
-       "      <th>inputs_generated_by</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>bookeq</td>\n",
-       "      <td>Book equity</td>\n",
-       "      <td>wrds.compa.book_equity</td>\n",
-       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>shreq</td>\n",
-       "      <td>Shareholder equity</td>\n",
-       "      <td>wrds.compa.book_equity</td>\n",
-       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>pref_stock</td>\n",
-       "      <td>Preferred stock</td>\n",
-       "      <td>wrds.compa.book_equity</td>\n",
-       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>tobinq</td>\n",
-       "      <td>Tobin Q</td>\n",
-       "      <td>wrds.compa.tobin_q</td>\n",
-       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>equityiss_tot</td>\n",
-       "      <td>Equity issuance</td>\n",
-       "      <td>wrds.compa.issuance_vars</td>\n",
-       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            name               label                 output_of  \\\n",
-       "0         bookeq         Book equity    wrds.compa.book_equity   \n",
-       "1          shreq  Shareholder equity    wrds.compa.book_equity   \n",
-       "2     pref_stock     Preferred stock    wrds.compa.book_equity   \n",
-       "3         tobinq             Tobin Q        wrds.compa.tobin_q   \n",
-       "4  equityiss_tot     Equity issuance  wrds.compa.issuance_vars   \n",
-       "\n",
-       "                                              inputs inputs_generated_by  \n",
-       "0        at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean  \n",
-       "1        at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean  \n",
-       "2        at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean  \n",
-       "3  at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...    wrds.compa.clean  \n",
-       "4  at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...    wrds.compa.clean  "
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metadata.features_metadata().head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NAME</th>\n",
-       "      <th>LABEL</th>\n",
-       "      <th>OUTPUT_OF</th>\n",
-       "      <th>INPUTS</th>\n",
-       "      <th>INPUTS_GENERATED_BY</th>\n",
-       "      <th>TYPE</th>\n",
-       "      <th>NR_ROWS</th>\n",
-       "      <th>WRDS_LIBRARY</th>\n",
-       "      <th>WRDS_TABLE</th>\n",
-       "      <th>GROUP</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SCORE</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>at</td>\n",
-       "      <td>Assets - Total</td>\n",
-       "      <td>wrds.compa.download</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881927</td>\n",
-       "      <td>comp</td>\n",
-       "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>act</td>\n",
-       "      <td>Current Assets - Total</td>\n",
-       "      <td>wrds.compa.download</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881927</td>\n",
-       "      <td>comp</td>\n",
-       "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>ao</td>\n",
-       "      <td>Assets - Other</td>\n",
-       "      <td>wrds.compa.download</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881927</td>\n",
-       "      <td>comp</td>\n",
-       "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>batr</td>\n",
-       "      <td>Benefits Assumed - Total</td>\n",
-       "      <td>wrds.compa.download</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881927</td>\n",
-       "      <td>comp</td>\n",
-       "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>rvti</td>\n",
-       "      <td>Reserves - Total</td>\n",
-       "      <td>wrds.compa.download</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881927</td>\n",
-       "      <td>comp</td>\n",
-       "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       NAME                      LABEL            OUTPUT_OF INPUTS  \\\n",
-       "SCORE                                                                \n",
-       "100      at            Assets - Total   wrds.compa.download    NaN   \n",
-       "75      act    Current Assets - Total   wrds.compa.download    NaN   \n",
-       "75       ao            Assets - Other   wrds.compa.download    NaN   \n",
-       "71     batr  Benefits Assumed - Total   wrds.compa.download    NaN   \n",
-       "69     rvti          Reserves - Total   wrds.compa.download    NaN   \n",
-       "\n",
-       "      INPUTS_GENERATED_BY              TYPE NR_ROWS WRDS_LIBRARY WRDS_TABLE  \\\n",
-       "SCORE                                                                         \n",
-       "100                   NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
-       "75                    NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
-       "75                    NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
-       "71                    NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
-       "69                    NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
-       "\n",
-       "      GROUP  \n",
-       "SCORE        \n",
-       "100    <NA>  \n",
-       "75     <NA>  \n",
-       "75     <NA>  \n",
-       "71     <NA>  \n",
-       "69     <NA>  "
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metadata.search('total assets').head()"
    ]
   },
   {
@@ -499,25 +222,92 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdp = fred.get_raw_data(['GDP'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>realtime_start</th>\n",
+       "      <th>realtime_end</th>\n",
+       "      <th>title</th>\n",
+       "      <th>observation_start</th>\n",
+       "      <th>observation_end</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>frequency_short</th>\n",
+       "      <th>units</th>\n",
+       "      <th>units_short</th>\n",
+       "      <th>seasonal_adjustment</th>\n",
+       "      <th>seasonal_adjustment_short</th>\n",
+       "      <th>last_updated</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GDP</td>\n",
+       "      <td>2023-11-12</td>\n",
+       "      <td>2023-11-12</td>\n",
+       "      <td>Gross Domestic Product</td>\n",
+       "      <td>1947-01-01</td>\n",
+       "      <td>2023-07-01</td>\n",
+       "      <td>Quarterly</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>Billions of Dollars</td>\n",
+       "      <td>Bil. of $</td>\n",
+       "      <td>Seasonally Adjusted Annual Rate</td>\n",
+       "      <td>SAAR</td>\n",
+       "      <td>2023-10-26 07:55:01-05</td>\n",
+       "      <td>92</td>\n",
+       "      <td>BEA Account Code: A191RC  Gross domestic produ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'Q':            dtdate    nom_gdp\n",
-       " Qdate                       \n",
-       " 1947Q1 1947-01-01    243.164\n",
-       " 1947Q2 1947-04-01    245.968\n",
-       " 1947Q3 1947-07-01    249.585\n",
-       " 1947Q4 1947-10-01    259.745\n",
-       " 1948Q1 1948-01-01    265.742\n",
-       " ...           ...        ...\n",
-       " 2022Q3 2022-07-01  25994.639\n",
-       " 2022Q4 2022-10-01  26408.405\n",
-       " 2023Q1 2023-01-01  26813.601\n",
-       " 2023Q2 2023-04-01  27063.012\n",
-       " 2023Q3 2023-07-01  27623.543\n",
-       " \n",
-       " [307 rows x 2 columns]}"
+       "    id realtime_start realtime_end                   title observation_start  \\\n",
+       "0  GDP     2023-11-12   2023-11-12  Gross Domestic Product        1947-01-01   \n",
+       "\n",
+       "  observation_end  frequency frequency_short                units units_short  \\\n",
+       "0      2023-07-01  Quarterly               Q  Billions of Dollars   Bil. of $   \n",
+       "\n",
+       "               seasonal_adjustment seasonal_adjustment_short  \\\n",
+       "0  Seasonally Adjusted Annual Rate                      SAAR   \n",
+       "\n",
+       "             last_updated popularity  \\\n",
+       "0  2023-10-26 07:55:01-05         92   \n",
+       "\n",
+       "                                               notes  \n",
+       "0  BEA Account Code: A191RC  Gross domestic produ...  "
       ]
      },
      "execution_count": null,
@@ -526,7 +316,112 @@
     }
    ],
    "source": [
-    "fred.clean(vars = ['GDP'])"
+    "gdp['info']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1947-01-01</th>\n",
+       "      <td>243.164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1947-04-01</th>\n",
+       "      <td>245.968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1947-07-01</th>\n",
+       "      <td>249.585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1947-10-01</th>\n",
+       "      <td>259.745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1948-01-01</th>\n",
+       "      <td>265.742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-01</th>\n",
+       "      <td>25994.639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-01</th>\n",
+       "      <td>26408.405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-01-01</th>\n",
+       "      <td>26813.601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-04-01</th>\n",
+       "      <td>27063.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-01</th>\n",
+       "      <td>27623.543</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>307 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  GDP\n",
+       "1947-01-01    243.164\n",
+       "1947-04-01    245.968\n",
+       "1947-07-01    249.585\n",
+       "1947-10-01    259.745\n",
+       "1948-01-01    265.742\n",
+       "...               ...\n",
+       "2022-07-01  25994.639\n",
+       "2022-10-01  26408.405\n",
+       "2023-01-01  26813.601\n",
+       "2023-04-01  27063.012\n",
+       "2023-07-01  27623.543\n",
+       "\n",
+       "[307 rows x 1 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp['Q']"
    ]
   },
   {
@@ -554,8 +449,60 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gvkey</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>date</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PRisk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NPRisk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Risk</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['gvkey', 'date', 'date_earningscall', 'PRisk', 'NPRisk', 'Risk', 'PSentiment']"
+       "     name\n",
+       "0   gvkey\n",
+       "1    date\n",
+       "2   PRisk\n",
+       "3  NPRisk\n",
+       "4    Risk"
       ]
      },
      "execution_count": null,
@@ -564,20 +511,7 @@
     }
    ],
    "source": [
-    "papers.hassan_etal_2019.variables()[:7]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide \n",
-    "#| eval: false\n",
-    "import os, glob\n",
-    "for f in glob.glob('../data/*'): os.remove(f)\n",
-    "with open('../data/.gitkeep', 'w') as f: pass "
+    "papers.hassan_etal_2019.list_all_vars().head()"
    ]
   }
  ],
