clened index of references to download and clean

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "> Download and process datasets commonly used in finance research\n",
     "\n",
-    "Each module handles a different data source. Almost all submodules (other than utility ones) have a `download` function that downloads the raw data and a `clean` function that processes the data into a `pandas.DataFrame` having, as index, either:\n",
+    "Each module handles a different data source. Almost all submodules (other than utility ones) have a `get_raw_data` function that downloads the raw data and a `process_raw_data` function that processes the data into a `pandas.DataFrame` having, as index, either:\n",
     "\n",
     "- A `pandas.Period` date reflecting the frequency of the data (for time-series datasets), or\n",
     "- A `pandas.MultiIndex` with a panel identifier in the first dimension and a `pandas.Period` date in the second dimension (for panel datasets).\n",
